AUTOMAKE_OPTIONS = gnits
noinst_HEADERS = apic.h defs.h dir.h disk_inode.h disk_inode_ffs.h \
	fat.h filesys.h freebsd.h fs.h i386-elf.h imgact_aout.h \
	mb_header.h mb_info.h pc_slice.h shared.h smp-imps.h

EXTRA_DIST = asm.S boot.c char_io.c cmdline.c common.c disk_io.c \
	fsys_ext2fs.c fsys_fat.c fsys_ffs.c gunzip.c smp-imps.c \
	stage1_5.c stage2.c
